[package]
name = "plutonium"
version = "0.5.0-experimental.0"
authors = ["Max Orok <maxwellorok@gmail.com>"]
repository = "https://github.com/mxxo/plutonium"
edition = "2018"
description = "Tools to avoid unnecessary use of safe code."
license = "MIT OR Apache-2.0"
exclude = ["pluto.png"]

[dependencies]
syn = {version = "1.0.14", features = ["full", "fold", "extra-traits"]}
quote = "1.0.2"
proc-macro2 = "1.0.19"

[lib]
proc-macro = true

[dev-dependencies]
rand = "0.7.3"
